test/cases/compile_errors/stage1/obj/invalid_maybe_type.zig
export fn f() void {
    if (true) |x| { _ = x; }
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:9: error: expected optional type, found 'bool'
